# backend-practice-rs

./: .gitignore  Cargo.toml  README.md
migrations/: 20241112044703_users.down.sql  20241112044703_users.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  routes.rs
src/handler/: auth.rs  mod.rs  users.rs
src/mail/: mails.rs  mod.rs  sendmail.rs
src/mail/templates/: Verification-email.html
src/utils/: password.rs  token.rs
