[package]
name = "backend-practice-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# password hashing algorithm
argon2 = "0.5.3"
# allow async functions in trait definition
async-trait = "0.1.83"
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
# date and time library
chrono = { version = "0.4.38", features = ["serde"] }
# load env vars from .env file
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.36"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
